--- a/WiLLiAN-projects/SpringLearning/AgvListProject/back/AgvListProject/src/main/resources/static/index.html
+++ b/WiLLiAN-projects/SpringLearning/AgvListProject/back/AgvListProject/src/main/resources/static/index.html
@@ -57,11 +57,11 @@
     </table>
   </div>
 
-  <!-- <script src="js/axios.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<!--  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>-->
+  <script src="js/axios.min.js"></script>
   <script type="module">
-    // import { createApp } from './js/vue.esm-browser.js'
-    import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.prod.js'
+    import { createApp } from './js/vue.esm-browser.js'
+    // import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.prod.js'
 
     createApp({
       data() {
