--- a/WiLLiAN-projects/ManagementApplication/src/main/resources/static/index.html
+++ b/WiLLiAN-projects/ManagementApplication/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <title>Employee List</title>
   <style>
     .title {
@@ -31,6 +32,33 @@
 <div id="app">
   <h1 class="title">Employee List</h1>
 
+  <!-- 検索 -->
+  <div class="search-box">
+    <label>
+      名前:
+      <input type="text" v-model="query.name">
+    </label>
+
+    <label>
+      性別:
+      <select v-model="query.gender">
+        <option value="">全て</option>
+        <option value="1">男</option>
+        <option value="2">女</option>
+      </select>
+    </label>
+
+    <label>
+      入社日:
+      <input type="date" v-model="query.begin">
+      ～
+      <input type="date" v-model="query.end">
+    </label>
+
+    <button @click="search">検索</button>
+  </div>
+
+  <!-- 表示 -->
   <table>
     <thead>
     <tr>
@@ -57,6 +85,7 @@
     </tbody>
   </table>
 
+  <!-- ページング -->
   <div class="pagination">
     <button @click="prevPage" :disabled="currentPage === 1">前へ</button>
     <span>ページ {{ currentPage }} / {{ maxPage }}</span>
@@ -73,7 +102,13 @@
         emps: [],
         currentPage: 1,
         pageSize: 10,
-        total: 0
+        total: 0,
+        query: {
+        name: '',
+        gender: '',
+        begin: '',
+        end: ''
+      }
       };
     },
     computed: {
@@ -83,27 +118,43 @@
     },
     methods: {
       loadEmps() {
-        fetch(`/emps?page=${this.currentPage}&pageSize=${this.pageSize}`)
-          .then(res => res.json())
-          .then(res => {
-            if (res.code !== 1) {
-              alert(res.msg || 'エラーが発生しました');
-              return;
-            }
-            this.emps = res.data.rows;
-            this.total = res.data.total;
-          })
-          .catch(err => {
-            console.error(err);
-            alert("データ取得に失敗しました");
-          });
+        axios.get('/emps', {
+          params: {
+            page: this.currentPage,
+            pageSize: this.pageSize,
+            name: this.query.name,
+            gender: this.query.gender,
+            begin: this.query.begin,
+            end: this.query.end
+          }
+        })
+        .then(res => {
+          const result = res.data;
+          if (result.code !== 1) {
+            alert(result.msg || 'エラーが発生しました');
+            return;
+          }
+          this.emps = result.data.rows;
+          this.total = result.data.total;
+        })
+        .catch(err => {
+          console.error(err);
+          alert('データ取得に失敗しました');
+        });
       },
+
+      search() {
+      this.currentPage = 1;
+      this.loadEmps();
+      },
+
       prevPage() {
         if (this.currentPage > 1) {
           this.currentPage--;
           this.loadEmps();
         }
       },
+
       nextPage() {
         if (this.currentPage < this.maxPage) {
           this.currentPage++;
